# mcp-codecommit

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
